test/commands/scan/dockerfile/kyverno-test.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: Tests
metadata:
  name: kyverno-test.yaml
tests:
- policies:
  - policy.yaml
  payload: payload.json
  result: fail
